# simpleFastApi

./: pyproject.toml
simplefastapi/: app.py
tests/: test_app.py
