[tool.poetry]
name = "simplefastapi"
version = "0.1.0"
description = ""
authors = ["Lucas Muniz <lucas.muniz@mv.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev simplefastapi/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix $$ ruff format . '

pre_test = 'task lint'
test = 'pytest --cov=simplefastapi -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
